# pipview

./: .gitignore  MANIFEST.in  README.md  hatch_build.py  pyproject.toml
frontend/: BUILD.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/views/: PackagesView.vue  SettingsView.vue  SourcesView.vue  TasksView.vue
src/pipui/: main.py
src/pipui/api/v1/: router.py
src/pipui/api/v1/endpoints/: config.py  packages.py  sources.py
src/pipui/common/: config.py  http.py  logger.py
src/pipui/core/: pip_service.py  source_service.py
src/pipui/scripts/: __init__.py
src/pipui/static/: index.html
src/pipui/static/assets/: index-yPRiDIN_.css
src/pipview/: main.py  server.py
src/pipview/api/v1/: router.py
src/pipview/api/v1/endpoints/: config.py  packages.py  sources.py  tasks.py
src/pipview/common/: config.py  logger.py  pip_helper.py
src/pipview/core/: pip_service.py  schemas.py  source_service.py  task_manager.py
src/pipview/static/: index.html
src/pipview/static/assets/: index-DD5uoPod.js
