[project]
name = "pipview"
version = "0.1.0"
description = "A modern web-based pip package manager dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "hatchling>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
source = "src"
artifacts = ["src/pipview/static/**"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
